@@ -265,6 +265,6 @@ public final class FastPFOR implements IntegerCODEC {
 
     @Override
     public String toString() {
-        return this.getClass().getName();
+        return this.getClass().getSimpleName();
     }
 }
