@@ -170,7 +170,7 @@ public final class OptPFD implements IntegerCODEC {
 
     @Override
     public String toString() {
-        return this.getClass().getName();
+        return this.getClass().getSimpleName();
     }
 
 }
