@@ -281,7 +281,7 @@ public final class Simple9 implements IntegerCODEC {
 
     @Override
     public String toString() {
-        return this.getClass().getName();
+        return this.getClass().getSimpleName();
     }
 
 }
